SessionsCollectionRS incorrectly creates and destroys RemoteCommandTargeters

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: 3.6.7, 4.0.2, 4.1.2
    • Component/s: None
    • Fully Compatible
    • ALL
    • 27
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      SessionsCollectionRS often sends commands from the secondary node to the primary node. When it does so, it creates a local RemoteCommandTargeter which goes out of scope after the command is sent. Along with this, a ReplicaSetMonitor is created on the RemoteCommandTargeter that is created and destroyed.

      It would be cleaner for SessionsCollectionRS to hold a reference to a singular RemoteCommandTargeter upon construction.

            Assignee:
            Benjamin Caimano (Inactive)
            Reporter:
            Blake Oler
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: