SERVER-36963 SessionsCollectionRS maintains a RemoteCommandTargeter